@startuml White
entity Artist {
    * id: VARCHAR
    --
    * name: VARCHAR
    --
    instagram: VARCHAR
    facebook: VARCHAR
    twitter: VARCHAR
    wikipedia: VARCHAR
    * bio: TEXT
}

entity Album {
    * id: VARCHAR
    --
    * title: VARCHAR
    * release: YEAR
    * image: VARCHAR
}

entity Song {
    * id: VARCHAR
    --
    * album_id: VARCHAR
    * title: VARCHAR
    * duration: INT
}

entity PlaylistGenre {
    * id: VARCHAR
    --
    * name: VARCHAR
    * image: VARCHAR
    * icon: VARCHAR
}

entity Playlist {
    * id: VARCHAR
    --
    * name: VARCHAR
    description: TEXT
    image: VARCHAR
    category_id: VARCHAR
    * user_id: VARCHAR
}

entity PodcastGenre {
    * id: VARCHAR
    --
    * name: VARCHAR
    * image: VARCHAR
}

entity Podcast {
    * id: VARCHAR
    --
    * name: VARCHAR
    about: TEXT
    image: VARCHAR
    category_id: VARCHAR
    --
    * user_id: VARCHAR
}

entity Episode {
    * id: VARCHAR
    --
    * podcast_id: VARCHAR
    * title: VARCHAR
    description: TEXT
    published_at: DATE
    duration: INT
}

entity User {
    * id: VARCHAR
    --
    * email: VARCHAR
    * name: VARCHAR
    birthday: DATE
}

entity Concert {
    * id: VARCHAR
    --
    * location: VARCHAR
    * event_at: DATETIME
    * url: VARCHAR
    longitude: DOUBLE
    latitude: DOUBLE
}

Artist }|--|{ Album : Has Album
Album ||--|{ Song : Contain Songs
Artist }o--o{ Song : Sings the Song
PlaylistGenre |o--o{ Playlist : Contain Songs
User |o--|{ Playlist : Create Playlist
Playlist }o--o{ Song : Contain Songs
PodcastGenre |o--|{ Podcast : Contain Podcasts
User ||--o{ Podcast : Create Podcast
Podcast ||--o{ Episode : Contain Podcasts
Artist }o--o{ Concert : Perform on Concert
User }o--o{ Artist : Follow
User }o--o{ Song : Liked Song
User }o--o{ Playlist : Follow

' user to podcast, done
' podcast to podcastgenre, done
' podcast to episode, done
' artist to song, done
' artist to concert, done
@enduml